--- a/templates/bar10/index.html
+++ b/templates/bar10/index.html
@@ -98,7 +98,7 @@ var myChart = new Chart(ctx, {
         */
           {
             label: 'New York City Budget: FY 2015 - FY 2022',
-            backgroundColor:["#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB"],
+            backgroundColor:["#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB"],
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#9E9E9E",
