--- a/templates/bar10/index.html
+++ b/templates/bar10/index.html
@@ -109,11 +109,11 @@ var myChart = new Chart(ctx, {
               "FY 2015",
               "FY 2016",
               "FY 2017",
-              "FY 2018 Plan",
-              "FY 2019 Plan",
-              "FY 2020 Plan",
-              "FY 2021 Plan",
-              "FY 2022 Plan"
+              "FY 2018 (Plan)",
+              "FY 2019 (Plan)",
+              "FY 2020 (Plan)",
+              "FY 2021 (Plan)",
+              "FY 2022 (Plan)"
       ]
     },
     options: {
