--- a/templates/stackedbar12/index.html
+++ b/templates/stackedbar12/index.html
@@ -10,12 +10,10 @@
     <body>
 
 
-<canvas id="stackedbar12" width=auto max-height="4
-00"></canvas>
+<canvas id="stackedbar12" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
-Chart.defaults.global.tooltips.backgroundColor="grey"
 Chart.defaults.global.maintainAspectRatio = true
 
 
@@ -33,7 +31,7 @@ var myChart = new Chart(ctx, {
                 "Bloomberg (FY 2007-2010)",
                 "Bloomberg (FY 2011-2014)",
                 "de Blasio (FY 2015-2017)"
-              ]
+              ],
         datasets: [
           {
             label: 'Personal Services',
