--- a/templates/stackedbar12/index.html
+++ b/templates/stackedbar12/index.html
@@ -107,10 +107,10 @@ var myChart = new Chart(ctx, {
           },
           {
             label: 'Pensions and Miscellaneous',
-            backgroundColor:"#A07952",
+            backgroundColor:"#D05D4E",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#A07952",
+            hoverBackgroundColor: "#D05D4E",
             hoverBorderColor: "#eeeeee",
             data: [15.47,14.18,12.71,18.75,21.36,22.79,24.15]
           },
