--- a/templates/stackedbar12/index.html
+++ b/templates/stackedbar12/index.html
@@ -80,46 +80,46 @@ var myChart = new Chart(ctx, {
         datasets: [
           {
             label: 'Education',
-            backgroundColor:"#12B886",
+            backgroundColor:"#23417D",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#12B886",
+            hoverBackgroundColor: "#23417D",
             hoverBorderColor: "#eeeeee",
             data: [27.27,28.24,31.23,30.56,30.91,30.69,30.64]
           },
           {
             label: 'Health and Social Services',
-            backgroundColor: "#F59F00",
+            backgroundColor: "#2F56A6",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#F59F00",
+            hoverBackgroundColor: "#2F56A6",
             hoverBorderColor: "#eeeeee",
             data: [36.25,35.78,33.46,31.09,28.35,26.66,25.74]
           },
           {
             label: 'Public Safety and Justice',
-            backgroundColor:"#228AE6",
+            backgroundColor:"#666666",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#228AE6",
+            hoverBackgroundColor: "#666666",
             hoverBorderColor: "#eeeeee",
             data: [12.6,14.25,15.26,13.09,12.12,12.33,11.82]
           },
           {
             label: 'Pensions and Miscellaneous',
-            backgroundColor:"#D05D4E",
+            backgroundColor:"#CACACA",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#D05D4E",
+            hoverBackgroundColor: "#CACACA",
             hoverBorderColor: "#eeeeee",
             data: [15.47,14.18,12.71,18.75,21.36,22.79,24.15]
           },
           {
             label: 'All Other',
-            backgroundColor:"#CACACA",
+            backgroundColor:"#E6E6E6",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#CACACA",
+            hoverBackgroundColor: "#E6E6E6",
             hoverBorderColor: "#eeeeee",
             data: [8.4,7.54,7.34,6.51,7.26,7.54,7.65]
           }
