--- a/templates/stackedbar11/index.html
+++ b/templates/stackedbar11/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="stackedbar5" width=auto max-height="4
+<canvas id="stackedbar11" width=auto max-height="4
 00"></canvas>
 <script>
 
@@ -19,134 +19,49 @@ Chart.defaults.global.tooltips.backgroundColor="grey"
 Chart.defaults.global.maintainAspectRatio = true
 
 
-var ctx = document.getElementById("stackedbar5");
+var ctx = document.getElementById("stackedbar11");
 
 var myChart = new Chart(ctx, {
     type: 'bar',
 
     data: {
-        labels: ["FY 2013 Adopted Budget","FY 2014 Adopted Budget",	"FY 2015 Adopted Budget", "FY 2016 Adopted Budget"],
+        labels: [
+              "FY 2015",
+              "FY 2016",
+              "FY 2017",
+              "FY 2018 Adopted",
+              "FY 2019 (Plan)",
+              "FY 2020 (Plan)",
+              "FY 2021 (Plan)",
+              "FY 2022 (Plan)"
+            ],
         datasets: [
           {
-            label: 'Department of Education',
+            label: 'Personal Services',
             backgroundColor:"#B2FF59",
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#B2FF59",
             hoverBorderColor: "#eeeeee",
-            data: [28.12,27.78,27.01,27.29]
-        },
-        {
-          label: 'Miscellaneous',
-          backgroundColor: "#607D8B",
-          borderColor: "#eeeeee",
-          borderWidth: 0,
-          hoverBackgroundColor: "#607D8B",
-          hoverBorderColor: "#eeeeee",
-          data: [9.70,10.76,12.60,13.85]
-      },
-      {
-        label: 'Department of Social Services',
-        backgroundColor:"#FFD740",
-        borderColor: "#eeeeee",
-        borderWidth: 0,
-        hoverBackgroundColor: "#FFD740",
-        hoverBorderColor: "#eeeeee",
-        data: [13.23,13.22,12.69,12.19]
-    },
-    {
-      label: 'Pension Contributions',
-      backgroundColor:"#B0BEC5",
-      borderColor: "#eeeeee",
-      borderWidth: 0,
-      hoverBackgroundColor: "#B0BEC5",
-      hoverBorderColor: "#eeeeee",
-      data: [11.50,11.63,11.19,10.90]
-  },
-  {
-    label: 'Police Department',
-    backgroundColor:"#18FFFF",
-    borderColor: "#eeeeee",
-    borderWidth: 0,
-    hoverBackgroundColor: "#18FFFF",
-    hoverBorderColor: "#eeeeee",
-    data: [6.68,6.65,6.26,6.31]
-},
-{
-  label: 'Admin. for Children Services',
-  backgroundColor:"#7C4DFF",
-  borderColor: "#eeeeee",
-  borderWidth: 0,
-  hoverBackgroundColor: "#7C4DFF",
-  hoverBorderColor: "#eeeeee",
-  data: [4.03,3.89,3.78,3.67]
-},
-{
-  label: 'Debt Service',
-  backgroundColor:"#455A64",
-  borderColor: "#eeeeee",
-  borderWidth: 0,
-  hoverBackgroundColor: "#455A64",
-  hoverBorderColor: "#eeeeee",
-  data: [4.03,3.89,3.78,3.67]
-},
-{
-  label: 'Fire Department',
-  backgroundColor:"#FF5252",
-  borderColor: "#eeeeee",
-  borderWidth: 0,
-  hoverBackgroundColor: "#FF5252",
-  hoverBorderColor: "#eeeeee",
-  data: [2.55,2.48,2.32,2.28]
-},
-{
-  label: 'Department of Sanitation',
-  backgroundColor:"#FF9800",
-  borderColor: "#eeeeee",
-  borderWidth: 0,
-  hoverBackgroundColor: "#FF9800",
-  hoverBorderColor: "#eeeeee",
-  data: [1.93,2.00,1.94,1.95]
-},
-{
-  label: 'Department of Health & Mental Hygiene',
-  backgroundColor:"#40C4FF",
-  borderColor: "#eeeeee",
-  borderWidth: 0,
-  hoverBackgroundColor: "#40C4FF",
-  hoverBorderColor: "#eeeeee",
-  data: [2.25,1.92,1.82,1.68]
-},
-{
-  label: 'Department of Environmental Protection',
-  backgroundColor:"#E040FB",
-  borderColor: "#eeeeee",
-  borderWidth: 0,
-  hoverBackgroundColor: "#E040FB",
-  hoverBorderColor: "#eeeeee",
-  data: [1.62,1.57,1.52,1.56]
-},
-{
-  label: 'Department of Correction',
-  backgroundColor:"#FF3D00",
-  borderColor: "#eeeeee",
-  borderWidth: 0,
-  hoverBackgroundColor: "#FF3D00",
-  hoverBorderColor: "#eeeeee",
-  data: [1.50,1.49,1.43,1.52]
-}
-
-
-
+            data: [44167,45038,46533,46835,49051,50714,52033,52558]
+          },
+          {
+            label: 'Other Than Personal Services',
+            backgroundColor: "#607D8B",
+            borderColor: "#eeeeee",
+            borderWidth: 0,
+            hoverBackgroundColor: "#607D8B",
+            hoverBorderColor: "#eeeeee",
+            data: [34815,36978,37462,37621,35617,35999,35842,36173]
+          }
       ]
-
     },
  options: {
    tooltips: {
      callbacks: {
        label: function(tooltipItem, data) {
 					var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
-				return datasetLabel + ': ' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index] + '%';
+				return datasetLabel + ': ' + '$' data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index] + ' Million';
       }
     }
   },
@@ -155,7 +70,10 @@ var myChart = new Chart(ctx, {
             yAxes: [{
                 stacked: true,
                 ticks: {
-                    beginAtZero:true
+                    beginAtZero:true,
+                    callback: function(value) {
+                      return '$'+value.toLocaleString('en-US')+ ' Million';
+                    }
                 }
             }],
             xAxes: [{
