--- a/templates/stackedbar11/index.html
+++ b/templates/stackedbar11/index.html
@@ -9,9 +9,7 @@
     </head>
     <body>
 
-
-<canvas id="stackedbar11" width=auto max-height="4
-00"></canvas>
+<canvas id="stackedbar11" max-width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
