--- a/templates/stackedbar12/index.html
+++ b/templates/stackedbar12/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="stackedbar12" width=auto max-height="900"></canvas>
+<canvas id="stackedbar12" max-width="400" max="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
