--- a/templates/stackedbar11/index.html
+++ b/templates/stackedbar11/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 
-<canvas id="stackedbar11" max-width="400" height="400"></canvas>
+<canvas id="stackedbar11" width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
