--- a/templates/stackedbar11/index.html
+++ b/templates/stackedbar11/index.html
@@ -36,19 +36,19 @@ var myChart = new Chart(ctx, {
         datasets: [
           {
             label: 'Personal Services',
-            backgroundColor:"#B2FF59",
+            backgroundColor:"#228AE6",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#B2FF59",
+            hoverBackgroundColor: "#228AE6",
             hoverBorderColor: "#eeeeee",
             data: [44167,45038,46533,46835,49051,50714,52033,52558]
           },
           {
             label: 'Other Than Personal Services',
-            backgroundColor: "#607D8B",
+            backgroundColor: "#F59F00",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#607D8B",
+            hoverBackgroundColor: "#F59F00",
             hoverBorderColor: "#eeeeee",
             data: [34815,36978,37462,37621,35617,35999,35842,36173]
           }
