--- a/templates/doughnut23/index.html
+++ b/templates/doughnut23/index.html
@@ -24,21 +24,21 @@ var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
         labels: [
-          "Administration & Operations (Other)",
-          "Public Works",
           "Education",
           "Public Safety",
+          "Administration & Operations (Other)",
           "Health & Human Services",
+          "Public Works",
           "Cultural & Parks"
           ],
         datasets: [{
             label: 'Fiscal 2019 FT Headcount',
-            backgroundColor:["#228AE6","#4EA1EB","#7AB8F0","#7AB8F0","#D2E7FA","#FFFFFF"],
+            backgroundColor:["#23417D","#666666","#E6E6E6","#2F56A6","#A07952","#CACACA"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [37151,16484,139404,82192,23796,4380]
+            data: [139404,82192,37151,23796,16484,4380]
         }]
     }
     ,
