--- a/templates/line9/index.html
+++ b/templates/line9/index.html
@@ -35,8 +35,8 @@ var myChart = new Chart(ctx, {
             borderDash: [],
             borderDashOffset: 0.0,
             borderJoinStyle: 'miter',
-            pointBorderColor: "#2F56A6",
-            pointBackgroundColor: "#2F56A6",
+            pointBorderColor: "#82C91E",
+            pointBackgroundColor: "#82C91E",
             pointBorderWidth: 5,
             pointHoverRadius: 6,
             pointHoverBackgroundColor: "#82C91E",
