--- a/templates/doughnut21/index.html
+++ b/templates/doughnut21/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <title>FY19 Revenues in Preliminary Budget</title>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
+        <script src="/dist/Chart.bundle.js"></script>
 
     </head>
     <body>
