--- a/templates/doughnut21/index.html
+++ b/templates/doughnut21/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <title>FY19 Revenues in Preliminary Budget</title>
 
-        <script src="/dist/Chart.bundle.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
     </head>
     <body>
@@ -16,7 +16,7 @@
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.maintainAspectRatio = true
-Chart.defaults.global.legend.display= false
+Chart.defaults.global.legend.display= true
 var theHelp = Chart.helpers;
 
 var ctx = document.getElementById("doughnut21");
@@ -24,10 +24,10 @@ var ctx = document.getElementById("doughnut21");
 var myPieChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["City Taxes",
-                "State Aid",
-                "Federal Aid",
-                "Other"
+        labels: ["City Taxes: $60 Billion",
+                "State Aid: $15 Billion",
+                "Federal Aid: $7.2 Billion",
+                "Other: $6.5 Billion"
           ],
         datasets: [{
             label: 'FY19 Revenues in Preliminary Budget',
@@ -42,22 +42,23 @@ var myPieChart = new Chart(ctx, {
     }
     ,
     options: {
-/*
+
       tooltips: {
           callbacks: {
             label: function(tooltipItem, data) {
-              return data.labels[tooltipItem.index] + ': '+ '$'+data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+' billion';
+              return data.labels[tooltipItem.index] /*+ ': '+ '$'+data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')*/;
             },
           }
       },
-      */
+
       legend: {
         display: true,
 
-
+/*
         // generateLabels changes from chart to chart,  check the source,
         // this one is from the doughut :
         // https://github.com/chartjs/Chart.js/blob/master/src/controllers/controller.doughnut.js#L42
+
       labels: {
         generateLabels: function(chart) {
           var data = chart.data;
@@ -86,6 +87,7 @@ var myPieChart = new Chart(ctx, {
           return [];
         }
       }
+      */
       }
     }
 });
