--- a/templates/barhorizontal18/index.html
+++ b/templates/barhorizontal18/index.html
@@ -103,9 +103,8 @@ var myChart = new Chart(ctx, {
           }
         }],
         yAxes: [{
-          display: true,
-          ticks: {
-            beginAtZero: true,
+          ticks:{
+              maxTicksLimit: 6
           }
         }]
       },
