--- a/templates/doughnut24/index.html
+++ b/templates/doughnut24/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Reason for Dealy Sept 2015-Sept 2018</title>
+        <title>Reason for Delay Sept 2015-Sept 2018</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -26,7 +26,7 @@ var myChart = new Chart(ctx, {
         labels: ["Heavy Traffic","Other","Mechanical Problem","Won't Start","Flat Tire","Weather Conditions","Late Return from Field Trip","Problem Run","Accident","Delayed by School"
           ],
         datasets: [{
-            label: 'Reason for Dealy Sept 2015-Sept 2018',
+            label: 'Reason for Delay Sept 2015-Sept 2018',
             backgroundColor:["#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6",],
             borderColor: "#eeeeee",
             borderWidth: 1,
