--- a/templates/barhorizontal19/index.html
+++ b/templates/barhorizontal19/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="barhorizontal18" max-width="400" height="600"></canvas>
+<canvas id="barhorizontal18" max-width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -77,7 +77,7 @@ var myChart = new Chart(ctx, {
         ],
         datasets: [{
             label: 'Average Minutes of Delay Per Reason Sept 2015 - Sept 2018',
-            backgroundColor:"#BE4BDB",
+            backgroundColor:["#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
