--- a/templates/doughnut24/index.html
+++ b/templates/doughnut24/index.html
@@ -27,7 +27,7 @@ var myChart = new Chart(ctx, {
           ],
         datasets: [{
             label: 'Reason for Delay Sept 2015-Sept 2018',
-            backgroundColor:["#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6",],
+            backgroundColor:["#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6","#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6","#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
