--- a/templates/barhorizontal20/index.html
+++ b/templates/barhorizontal20/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Average Minutes of Delay Per Reason Sept 2015 - Sept 2018</title>
+        <title>Average Minutes of Delay Per Borough Sept 2015 - Sept 2018</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="barhorizontal19" max-width="400" height="400"></canvas>
+<canvas id="barhorizontal20" max-width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -67,22 +67,22 @@ Chart.defaults.scale = {
 
 // Chart.defaults.global.defaultFontSize = 10
 
-var ctx = document.getElementById("barhorizontal19");
+var ctx = document.getElementById("barhorizontal20");
 
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
         labels: [
-          "Accident","Mechanical Problem","Flat Tire","Won't Start","Weather Conditions","Late Return from Field Trip","Problem Run","Other","Heavy Traffic","Delayed by School"
+          "Queens","Brooklyn","Manhattan","Bronx","Staten Island"
         ],
         datasets: [{
-            label: 'Average Minutes of Delay Per Reason Sept 2015 - Sept 2018',
-            backgroundColor:["#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6","#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6","#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6","#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6"],
+            label: 'Average Minutes of Delay Per Borough Sept 2015 - Sept 2018',
+            backgroundColor:["#2F56A6","#228AE6","#4EA1EB","#7AB8F0","#D2E7FA"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [39.1,34.1,33.5,31.9,29.5,28.6,28.3,28.0,23.3,18.9]
+            data: [29.3,29.1,26.9,20.7,18.2]
         }]
     },
     options: {
