--- a/templates/barhorizontal21/index.html
+++ b/templates/barhorizontal21/index.html
@@ -73,7 +73,7 @@ var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
         labels: [
-          "Happy Child Trans LLC","Careful Bus Service Inc","Third Avenue Transit","Thomas Buses, Inc.","Third Avenue Transit, Inc","Jofaz Transportation Inc.","Lorissa Bus Service Inc.","New Dawn Transit, LLC","Children`S Trans Inc.","Lorinda Enterprises, Ltd."
+          "Happy Child Trans LLC","Careful Bus Service Inc","Third Avenue Transit","Thomas Buses, Inc.","Third Avenue Transit, Inc","Jofaz Transportation Inc.","Lorissa Bus Service Inc.","New Dawn Transit, LLC","Children's Trans Inc.","Lorinda Enterprises, Ltd."
         ],
         datasets: [{
             label: 'Average Minutes of Delay Per Bus Company Sept 2015 - Sept 2018',
