--- a/templates/barhorizontal21/index.html
+++ b/templates/barhorizontal21/index.html
@@ -73,8 +73,7 @@ var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
         labels: [
-          "Happy Child Trans LLC","Careful Bus Service Inc","Third Avenue Transit","Thomas Buses, Inc.","Third Avenue Transit, Inc","Jofaz Transportation Inc.","Lorissa Bus Service Inc.","New Dawn Transit, LLC","Children's Trans Inc.","Lorinda Enterprises, Ltd."
-        ],
+        "Happy Child Trans Llc","Selby Transportation","Reliant Trans, Inc.","Jofaz Transportation Inc","New Dawn Transit, Llc"
         datasets: [{
             label: 'Average Minutes of Delay Per Bus Company Sept 2015 - Sept 2018',
             backgroundColor: '#BE4BDB',
@@ -82,7 +81,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [51.5,43.7,35.7,35.4,35.3,34.8,33.8,33.7,33.7,32.2]
+            data: [51.5,43.8,37.9,34.8,33.7]
         }]
     },
     options: {
