--- a/templates/barhorizontal19/index.html
+++ b/templates/barhorizontal19/index.html
@@ -77,7 +77,7 @@ var myChart = new Chart(ctx, {
         ],
         datasets: [{
             label: 'Average Minutes of Delay Per Reason Sept 2015 - Sept 2018',
-            backgroundColor:["#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6","#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6","#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6","#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6"],
+            backgroundColor:["#D2E7FA","#4EA1EB","#7AB8F0","#64ADED","#90C4F2","#A6D0F5","#BCDBF7","#3895E8","#228AE6","#E8F3FC"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
