--- a/templates/doughnut25/index.html
+++ b/templates/doughnut25/index.html
@@ -27,7 +27,7 @@ var myChart = new Chart(ctx, {
           ],
         datasets: [{
             label: 'Response Types: Cases Created Jan - Sept 2018',
-            backgroundColor:["#BE4BDB","#C661DF","#CE78E4","#D68EE8","#DEA5ED","#E6BBF1","#EED2F6","#F6E8FA"],
+            backgroundColor:["#228AE6","#82C91E","#BE4BDB","#D05D4E","#F59F00","#A07952","#12B886","#2F56A6"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
