--- a/templates/untitled folder/index.html
+++ b/templates/untitled folder/index.html
@@ -75,7 +75,7 @@
                drawTime: "afterDraw",
                events: ['dblclick'],
                annotations: [{
-                 id: '2015 school',
+                 id: '2015-school',
                  type: 'box',
                  xScaleID: 'x-axis-1',
                  yScaleID: 'y-axis-1',
