--- a/templates/linechartmulti14/index.html
+++ b/templates/linechartmulti14/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Traffic and Preventable Causing Delays Sept 2015-Sept 20218</title>
+        <title>Traffic Delays Sept 2015-Sept 20218</title>
 
   <!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>-->
            <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js'></script>
