--- a/templates/linechartmulti14/index.html
+++ b/templates/linechartmulti14/index.html
@@ -18,7 +18,6 @@
 Chart.defaults.global.responsive = true
 Chart.defaults.global.tooltips.backgroundColor="grey"
 Chart.defaults.global.maintainAspectRatio = true
-Chart.defaults.global.legend = false
 
 
 var ctx = document.getElementById("linechart14");
@@ -52,7 +51,7 @@ var myChart = new Chart(ctx, {
               data: [211,214,218,222,226,230,234,238,242,246,257,261,265,269,273,277,280,284,288,292,304,308,312,315,319,323,327,331,335,339,350,354]
             },
             {
-              label: "Heavy Traffic Trend StDev",
+              label: "Expected Delay Times",
               fill: false,
               pointRadius: 1,
               backgroundColor: "#DFF1C6",
@@ -65,7 +64,7 @@ var myChart = new Chart(ctx, {
               data: [271,275,279,283,287,291,295,299,302,306,318,322,326,330,334,338,341,345,349,353,365,368,372,376,380,384,388,392,396,399,411,415]
             },
             {
-              label: "Heavy Traffic Trend -StDev",
+              label: "Expected Delay Times",
               fill: false,
               pointRadius: 1,
               backgroundColor: "#DFF1C6",
