--- a/templates/barhorizontal19/index.html
+++ b/templates/barhorizontal19/index.html
@@ -73,7 +73,7 @@ var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
         labels: [
-          "Accident","Mechanical Problem","Flat Tire","Won't Start","Weather Conditions","Problem Run","Late return from Field Trip","Other","Heavy Traffic","Delayed by School"
+          "Accident","Mechanical Problem","Flat Tire","Won't Start","Weather Conditions","Problem Run","Late Return from Field Trip","Other","Heavy Traffic","Delayed by School"
         ],
         datasets: [{
             label: 'Average Minutes of Delay Per Reason Sept 2015 - Sept 2018',
